--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIURO PODRÓŻY</title>
     <link rel="stylesheet" href="style.css">
-</head>
-</html>
+</head><body></body>
+    <header>
+        <h1>BIURO PODRÓŻY</h1>
+    </header>
+
+    <main>
+        <section class="promocje">
+            <h2>Promocje</h2>
+            <table>
+                <tr><td>Warszawa</td><td>od 600 zł</td></tr>
+                <tr><td>Wenecja</td><td>od 1200 zł</td></tr>
+                <tr><td>Paryż</td><td>od 1200 zł</td></tr>
+            </table>
+        </section>
+
+        <section class="zdjecia">
+            <h2>W tym roku jedziemy do...</h2>
+            <div class="galeria">
+                <img src="londyn.jpg" alt="Miasto 1">
+                <img src="paryż.jpg" alt="Miasto 2">
+                <img src="Budapeszt.jpg" alt="Miasto 3">
+                <img src="Wenecja.jpg" alt="Miasto 4">
+                <img src="wieden.jpg" alt="Miasto 5">
+                <img src="barcelona.jpg" alt="Miasto 6">
+                <img src="berlni.jpg" alt="Miasto 7">
+                <img src="nowyjork.jpg" alt="Miasto 8">
+                <img src="moskwa.jpg" alt="Miasto 9">
